# kei_shell

./: .clangd  .gitignore  meson.build
.github/: dependencies
.github/workflows/: CI.yml
include/: arg_parser.hh  exception.hh  utils.hh
include/shell/: parser.hh
src/: arg_parser.cc  exception.cc  main.cc  utils.cc
src/shell/: parser.cc
